--- a/template/register.html
+++ b/template/register.html
@@ -30,6 +30,8 @@
             </div>
         </div>
     </form>
+    <br>
+    <a href="/login"><button class="ui inverted red button">Login</button> </a>
 
 </body>
 
